# kalopsia-os

./: Cargo.toml  README.md  kalopsia-os-x86-64.json
.cargo/: config.toml
src/: lib.rs  main.rs
src/gdt/: mod.rs  tss.rs
src/interrupts/: interrupts_tests.rs  mod.rs  pic.rs  utils.rs
src/interrupts/keyboard/: mod.rs
src/test_framework/: mod.rs  serial.rs
src/utils/: mod.rs  port.rs
src/vga_buffer/: mod.rs  writer.rs
src/vga_buffer/writer/: mod.rs  writer_tests.rs
tests/: basic_vga_test.rs  stack_overflow_test.rs  timer_interrupt_test.rs
