[package]
name = "kalopsia-os"
version = "0.1.0"
edition = "2024"

# Binary doesn't support builds in bench modes
[[bin]]
name = "kalopsia-os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
spin = "0.10"
lazy_static = {version="1.0", features=["spin_no_std"]}
uart_16550 = "0.4"
x86_64 = "0.15.2"

# Exit qemu after testing. Qemu will exit when port 0x74 gets some exit status code
# The exit status code will be (value << 1) | 1
# If tests run successfully, we store 0x10(16 in base 10), so the exit code will be (32 | 1 = 33(base 10)) = 0x21
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
            "-serial", "stdio",
            "-display", "none"
            ]
test-success-exit-code = 33
